[package]
name = "hpm-riscv-rt-macros"
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
description = "Procedural macros for hpm-riscv-rt"

[lib]
proc-macro = true
# avoid nesting too deep
path = "lib.rs"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]
